# C-projects

./: LICENSE
8-divisors/: CMakeLists.txt
CLion Projects (C)/8-divisors/: main.c
CLion Projects (C)/Spotify/: CMakeLists.txt  dictionary.c  dictionary.h  main.c
CLion Projects (C)/URI-1069/: main.c
CLion Projects (C)/bar-graph/: CMakeLists.txt
CLion Projects (C)/bibiloteca/: CMakeLists.txt
CLion Projects (C)/bin-to-dec/: CMakeLists.txt  exec  main.c  valgrind-out.txt
CLion Projects (C)/bmp-reader/: main.c
CLion Projects (C)/collatz/: main.c
CLion Projects (C)/csv-reader/: main.c
CLion Projects (C)/determinante/: main.c
CLion Projects (C)/pokebox/: Main.c  PokeBox.c  PokeBox.h  dataStructures.c  dataStructures.h  utils.h
CLion Projects (C)/prog-teste/: CMakeLists.txt  main.c
CLion Projects (C)/sgdb/: CMakeLists.txt
CLion Projects (C)/substituir-string/: CMakeLists.txt  main.c
CLion Projects (C)/tetris/: CMakeLists.txt  (+1 more)
Perutacoes ordenadas rapidamente/: CMakeLists.txt  main.c
Spotify/: dictionary.c  dictionary.h  utils.c  utils.h
URI-1069/: CMakeLists.txt
bar-graph/: main.c
bibiloteca/: main.c
bmp-reader/: CMakeLists.txt
collatz/: CMakeLists.txt
csv-reader/: CMakeLists.txt
determinante/: CMakeLists.txt
dictionary/: CMakeLists.txt  main.c
f-function/: CMakeLists.txt  main.c
jogo-velha/: CMakeLists.txt  main.c
ordenar-registros/: CMakeLists.txt  main.c
pokebox/: CMakeLists.txt  Main.c  dataStructures.c  dataStructures.h  utils.c
sgdb/: main.c
sum-square-divisors/: main.c
tetris/: exec  main.c
untitled/: main.c
(+7 files in other folders)
